# socklib

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  tcpserver.cpp  udpserver.cpp
src/: CMakeLists.txt  socket.cpp  socket.h  tcpclientsocket.cpp  tcpclientsocket.h  tcpserversocket.cpp  tcpserversocket.h
